7th Nov saving changes

--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>JOY</h1>
 
-    <main>Main Content</main>
+  <body>
+    <h1>Joy</h1>
+
+    <main>Main Content placeholder</main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer>Footer</footer>
   </body>
